Cascading Change Log

1.0.7

  Fixed bug where c.o.r.RegexSplitter did not consistently split incoming values if the value had blank 
  fields between the split delimiter. This only occurs if the incoming tuple is declared Fields.UNKNOWN
  and won't affect any tuple with declared field names. Though this is an incompatible change, the bug
  breaks the contract of the splitter.

  Deprecated all S3 supporting classes, including c.t.S3fs. The s3n:// protocol is the preferred S3 interface.

  Fixed bug where c.t.Hfs caused a NPE from the NativeS3FileSytem when attempting to delete the root directory.
  Hfs now detects a delete is attempted on the root dir, and returns immediately.

1.0.6

  Fixed bug where a uri path to a s3n://bucket/ could cause an NPE when determining mod time on the path.

  Fixed bug where sink c.s.Scheme sink fields were not being consulted during planning. This fix may
  cause planner errors in existing applications where the sink fields are not actually available in the incoming
  tuple stream.

  Updated application jar discovery to provide more sane defaults supporting simple cases.

  Fixed bug where default properties in nested j.u.Properties object were not being copied.

1.0.5

  Added check if num reducers is zero, if so, assume #reduce() has no intention of being called and return silently.

1.0.4

  Updated split optimizer to perform a multipass optimization.

  Fixed bug where c.f.MultiMapReducePlanner was not properly handling splits on named Pipe instances.

  Added c.t.TemplateTap constructor arg that allows for independent tuple selection for use by template path.

  Fixed bug where unsafe filename characters were leaking into temporary filenames, didn't take the first time.

1.0.3

  Fixed bug in c.f.MultiMapReducePlanner where split and joins with the same source were not handled properly.

  Fixed bug in c.f.Flow#writeDOT caused by changes in 1.0.2.
