@@ -1,2 +1,2 @@
-cascading.release.version=1.0.7
+cascading.release.version=1.0.8
 cascading.hadoop.compatible.version=hadoop-0.19.0+
