@@ -1,8 +1,13 @@
 Cascading Change Log
 
+unreleased
+
+  Workaround for bug in o.a.h.f.s.NativeS3FileSystem where a null is returned when getting a FileStatus array
+  in some cases.
+
 1.0.7
 
-  Fixed bug where c.o.r.RegexSplitter did not consistently split incoming values if the value had blank 
+  Fixed bug where c.o.r.RegexSplitter did not consistently split incoming values if the value had blank
   fields between the split delimiter. This only occurs if the incoming tuple is declared Fields.UNKNOWN
   and won't affect any tuple with declared field names. Though this is an incompatible change, the bug
   breaks the contract of the splitter.
